--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,13 @@
   "name": "SwitchSearch",
   "version": "1.1",
   "description": "Quickly switch between search engines from the search results page.",
-  "permissions": ["storage", "tabs"],
+  "permissions": ["storage", "tabs", "contextMenus"],
   "action": {
     "default_popup": "popup/popup.html",
     "default_icon": "icon.png"
+  },
+  "background": {
+    "scripts": ["background.js"]
   },
   "options_page": "settings/settings.html",
   "icons": {
