--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     "default_icon": "icon.png"
   },
   "background": {
-    "scripts": ["background.js"]
+    "scripts": ["background.js"],
+    "type": "module"
   },
   "options_page": "settings/settings.html",
   "icons": {
