--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "manifest_version": 3,
   "name": "SwitchSearch",
-  "version": "1.1",
+  "version": "1.2",
   "description": "Quickly switch between search engines from the search results page.",
   "permissions": ["storage", "tabs", "contextMenus"],
   "action": {
     "default_popup": "popup/popup.html",
-    "default_icon": "icon.png"
+    "default_icon": "images/icon48.png"
   },
   "background": {
     "scripts": ["background.js"],
@@ -14,7 +14,8 @@
   },
   "options_page": "settings/settings.html",
   "icons": {
-    "64": "icon.png"
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
   },
   "browser_specific_settings": {
     "gecko": {
