--- a/Chrome/manifest.json
+++ b/Chrome/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "SwitchSearch",
-  "version": "1.3",
-  "description": "Quickly switch between search engines from the search results page.",
+  "version": "1.4",
+  "description": "Switch Search Engines Without Losing Your Query",
   "permissions": ["background", "storage", "tabs", "contextMenus", "activeTab"],
   "action": {
     "default_popup": "popup/popup.html",
